Updated link repository and service, controller, added javadoc